Fixing small issues with plant size on mobile

--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ nav {
   animation: plant-entrance 1.5s ease-out 0.5s forwards,
     plant-shake 2.5s infinite ease alternate-reverse 2s;
   transform-origin: bottom;
+  max-height: 80%;
 }
 
 .plant2 {
@@ -202,6 +203,15 @@ nav {
 }
 
 @media screen and (max-width: 842px) {
+  .hero {
+    width: 100%;
+  }
+  .hero-introduction p {
+    padding: 5rem 3rem;
+  }
+
+  /* Burger Menu */
+
   .burger {
     position: relative;
     display: block;
